--- a/myfontchoice.html
+++ b/myfontchoice.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
 
+<html>
+  <head>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700|Droid+Serif' rel='stylesheet' type='text/css'>
+    <style>
+      body {
+        font-family: 'Playfair Display', serif;
+        font-size: 24px;
+        margin-left: 38px
+      }
+      h1 {
+        margin-left: 40px;
+        font-family: 'Droid Serif', serif;
+      }
+      }
+    </style>
+  </head>
+  <body>
+    <h1>This is a header</h1>
+    <p>This is a paragraph in a different font! And both fonts are swell together.</p>
+  </body>
+</html>
