--- a/myfontchoice.html
+++ b/myfontchoice.html
@@ -2,16 +2,16 @@
 
 <html>
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700|Droid+Serif' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700|EB+Garamond' rel='stylesheet' type='text/css'>
     <style>
       body {
-        font-family: 'Playfair Display', serif;
+        font-family: 'EB Garamond', serif;
         font-size: 24px;
         margin-left: 38px
       }
       h1 {
         margin-left: 40px;
-        font-family: 'Droid Serif', serif;
+        font-family: 'Playfair Display', serif;
       }
       }
     </style>
